--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::selection {
+  /* псевдокласс выделения */
+  color: #fff;
+  background-color: #2B7DED;
+}
+
+/* font*/
+html {
+  font-family: 'Segoe UI', 'SegoeUI', 'Helvetica' , 'Arial', sans-serif;
+  font-size: 16px;
+  scroll-behavior: smooth;
+}
+
+@media (max-width: 992px) {
+  html {
+    font-size: 1rem;
+  }
+}
+
+/* мобильная версия */
+@media (max-width: 580px) {
+  html {
+    font-size: 0.8rem;
+  }
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  text-align: center;
 }
